<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.AddDish"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_marginTop="250dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/field_dish_name"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginBottom="200px"
            android:layout_marginLeft="100px"
            android:layout_marginRight="100px"
            android:hint="@string/placeholder_dish_name"

            />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_alignParentRight="true"
            android:layout_marginTop="200px"
            android:layout_marginRight="100px"
            />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginTop="200px"
            android:layout_marginLeft="100px"
            />
    </RelativeLayout>

</LinearLayout>