<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout"
    android:gravity="center"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    tools:context="ingredient_1.IngredientActivity_1"
    android:orientation="vertical">

    <EditText
        android:id="@+id/ingredient_1_field_ingredient_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:hint="@string/ingredient_name"
        android:imeOptions="actionNext"
        android:maxLength="20"
        android:maxLines="1"
        android:inputType=""
        android:singleLine="true"
        />

    <RelativeLayout
        android:id="@+id/ingredient_1_second_layout"
        android:layout_below="@id/ingredient_1_field_ingredient_name"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:layout_alignParentStart="true"
            android:id="@+id/ingredient_1_field_dish_weight"
            android:inputType="number"
            android:hint="@string/dish_weight"
            android:maxLength="20"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:layout_alignParentEnd="true"
            android:id="@+id/ingredient_1_dropdown_metrics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@id/ingredient_1_second_layout"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_alignParentStart="true"
            android:id="@+id/ingredient_1_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back" />

        <Button
            android:layout_alignParentEnd="true"
            android:id="@+id/ingredient_1_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </RelativeLayout>

</RelativeLayout>