<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddDish"
    tools:showIn="@layout/activity_add_dish">

    <RelativeLayout
        android:layout_marginTop="250dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/input_dish"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginBottom="200px"
            android:layout_marginLeft="100px"
            android:layout_marginRight="100px"
            android:hint="@string/placeholder_dish_name"
            android:ems="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_alignParentRight="true"
            android:layout_marginTop="200px"
            android:layout_marginRight="100px"
            />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginTop="200px"
            android:layout_marginLeft="100px"
             />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>