<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="activity.EditDish">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_edit_dish"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_edit_dish"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/title_activity_edit_dish"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="80px" />

            <Button
                android:id="@+id/btn_save"
                android:layout_marginTop="20px"
                android:layout_width="250px"
                android:layout_height="150px"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="20dp"
                android:text="@string/save" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/field_dish_name"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginLeft="100px"
            android:layout_marginRight="100px"
            android:hint="@string/placeholder_dish_name"
            />

    </RelativeLayout>

</LinearLayout>